--- a/custom_components/morse/manifest.json
+++ b/custom_components/morse/manifest.json
@@ -4,5 +4,6 @@
     "documentation": "https://github.com/Miicroo/ha-morse",
     "dependencies": [],
     "codeowners": ["@Miicroo"],
-    "requirements": []
+    "requirements": [],
+    "version": "1.0.0"
 }
